--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 		<div class="clearfix"></div>
 
+		<div class="line"></div>
+
 		<div class="container">
 			<div class="c_top">精品课程</div>
 			<div class="c_cont">
@@ -106,6 +108,7 @@
 		</div>
 		
 		<div class="clearfix"></div>
+		<div class="line"></div>
 		
 		
 		<div class="container">
@@ -157,58 +160,7 @@
 		</div>
 		
 		<div class="clearfix"></div>
-		
-		
-		<div class="container">
-			<div class="c_top">精品课程</div>
-			<div class="c_cont">
-				<ul>
-					<li>
-						<a href="#"><img  src="img/noimage.jpg" _src="img/a.png" alt="" /></a>
-						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
-						<p class="info">
-							<span class="fl c1">免费</span>
-							<a href="#" class="fr c2">前端全栈</a>
-						</p>
-					</li>
-					<li>
-						<a href="#"><img  src="img/noimage.jpg" _src="img/b.png" alt="" /></a>
-						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
-						<p class="info">
-							<span class="fl c1">免费</span>
-							<a href="#" class="fr c2">前端全栈</a>
-						</p>
-					</li>
-					<li>
-						<a href="#"><img  src="img/noimage.jpg" _src="img/c.png" alt="" /></a>
-						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
-						<p class="info">
-							<span class="fl c1">免费</span>
-							<a href="#" class="fr c2">前端全栈</a>
-						</p>
-					</li>
-					<li>
-						<a href="#"><img  src="img/noimage.jpg" _src="img/d.png" alt="" /></a>
-						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
-						<p class="info">
-							<span class="fl c1">免费</span>
-							<a href="#" class="fr c2">前端全栈</a>
-						</p>
-					</li>
-					<li>
-						<a href="#"><img  src="img/noimage.jpg" _src="img/e.png" alt="" /></a>
-						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
-						<p class="info">
-							<span class="fl c1">免费</span>
-							<a href="#" class="fr c2">前端全栈</a>
-						</p>
-					</li>
-				</ul>
-			</div>
-		</div>
-		
-		
-		<div class="clearfix"></div>
+		<div class="line"></div>
 		
 		
 		<div class="container">
@@ -261,6 +213,60 @@
 		
 		
 		<div class="clearfix"></div>
+		<div class="line"></div>
+		
+		
+		<div class="container">
+			<div class="c_top">精品课程</div>
+			<div class="c_cont">
+				<ul>
+					<li>
+						<a href="#"><img  src="img/noimage.jpg" _src="img/a.png" alt="" /></a>
+						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
+						<p class="info">
+							<span class="fl c1">免费</span>
+							<a href="#" class="fr c2">前端全栈</a>
+						</p>
+					</li>
+					<li>
+						<a href="#"><img  src="img/noimage.jpg" _src="img/b.png" alt="" /></a>
+						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
+						<p class="info">
+							<span class="fl c1">免费</span>
+							<a href="#" class="fr c2">前端全栈</a>
+						</p>
+					</li>
+					<li>
+						<a href="#"><img  src="img/noimage.jpg" _src="img/c.png" alt="" /></a>
+						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
+						<p class="info">
+							<span class="fl c1">免费</span>
+							<a href="#" class="fr c2">前端全栈</a>
+						</p>
+					</li>
+					<li>
+						<a href="#"><img  src="img/noimage.jpg" _src="img/d.png" alt="" /></a>
+						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
+						<p class="info">
+							<span class="fl c1">免费</span>
+							<a href="#" class="fr c2">前端全栈</a>
+						</p>
+					</li>
+					<li>
+						<a href="#"><img  src="img/noimage.jpg" _src="img/e.png" alt="" /></a>
+						<h3>大web前端全栈-javascript详解【前端全栈】</h3>
+						<p class="info">
+							<span class="fl c1">免费</span>
+							<a href="#" class="fr c2">前端全栈</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		
+		
+		<div class="clearfix"></div>
+		<div class="line"></div>
 		
 		
 		<div class="container">
